4.567.89    2021-08-06

- recommend Taint::Runtime instead of the 'tainting' module, which
  is deprecated by its author

2019-02-12    4          Catch errors more robustly (but still not perfectly)

2019-02-11    2          Fix build problems

2019-02-10    1          First release