@@ -1,3 +1,8 @@
+65535       2024-01-17
+
+- Fix error when $Data::Dumper::Terse is set, see
+  https://github.com/DrHyde/perl-modules-Unix-Sudo/issues/19
+
 4.567.89    2021-08-06
 
 - recommend Taint::Runtime instead of the 'tainting' module, which
